2003-07-08  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* admin.c :
	* proc.c :
	* proc.h :

	  - Manupulator gui now shows a sorted table of identifiers.

	  - Now manipulator gui shows sequences and transformations with
	    parameters.

	* mod_vlad.c :
	* proc.c :
	* proc.h :

	  - Added protection from misconfiguration: Requests are preceded by
	    a call to modvlad_check which checks whether the server process
	    is alive and the kb within is non-null.

	* mod_vlad.c :

	  - Added child_init hook to initialize child mutex and random seed.

	* util.c :

	  - Now properly generates a pseudo random number for id.

	* proc.c :

	  - Fixed bug that prevented transformations with more than one
	    parameter from working.

2003-07-07  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* mod_vlad.c :
	* proc.c :
	* proc.h :

	  - Added message + functions to allow module to send out a NOT FOUND
	    error code when the file requested does not exists.

	* proc.c :
	* util.c :
	* util.h :

	  - Added a message id (random number) in every pipe message for
	    concurrency testing.

	* proc.c :

	  - Added error pipe messages.

	* mod_vlad.h :

	  - Added basic error codes.

	* config.h.in :
	* configure :
	* configure.ac :

	  - Added a config.h in for variables version and debug.

2003-07-04  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* admin.c :
	* mod_vlad.c :
	* mod_vlad.h :
	* proc.c :
	* proc.h :
	* util.c :
	* util.h :

	  - Added pipes, forks, mutex's, polls and other trickery to allow
	    the module to work in a multi-process environment. VERY messy.

2003-07-03  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Makefile.in :
	* proc.c :
	* proc.h :

	  - Added file that will handle ipc's.

2003-07-02  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* mod_vlad.c :

	  - Including unistd.h causes warnings because that file and
	    pthread.h both declares pthread_atfork(). Since the only thing we